Changes for 2018.3
===============================
v_mix_v5_0:
Modified existing Stop API for flush feature.

v_frmbuf_wr_v4_0:
Added new API, This API is used to wait for IP to enter into idle state.
Modified existing Stop API to support Flushing feature.

v_frmbuf_rd_v4_0:
Added new API, This API is used to wait for IP to enter into idle state.
Modified existing Stop API to support Flushing feature.

i2stx_v2_0:
This patch has 2 new APIs, one API is to enable the justification and 
the other one is to set Left or Right justification.

i2srx_v2_0:
This patch has 2 new APIs, one API is to enable the justification and 
the other one is to set Left or Right justification.


v_hdmitxss_v5_2:
Added I2S, Repeater and Repeater Professional applications.
Repeater functionality is disabled in the applications by default.
Added log for video bridge unlocked.
Fixed Video Masking Feature.

v_hdmitx_v2_2:
Fixed HPD and toggle to support different AXI-Lite frequency.
Added Overflow and Underflow (Video Bridge) Interrupt.

v_hdmirxss_v5_2:
Added I2S, Repeater and Repeater Professional applications.
Repeater functionality is disabled in the applications by default.
XV_HDMIRXSS_HDCP_1_PROT_EVT, XV_HDMIRXSS_HDCP_2_PROT_EVT events are deprecated.
Added TMDS Clock Ratio callback support.

v_hdmirx_v2_2:
Fixed SDK GCC warning message issue.
Added TMDS Clock Ratio callback support.

vphy_v1_8:
Updated CDR values for DP in xvphy_gtye4.c
Removed deprecated APIS: XVphy_DrpWrite and XVphy_DrpRead
Added/Moved APIs XVphy_SetTxVoltageSwing and XVphy_SetTxPreEmphasis from xvphy_i.c/h
Added XVphy_SetTxPostCursor API in xvphy.h

freertos10_xilinx_v1_2:
Updated FreeRTOS tcl to add -hier option while using get_cells command.
It fixes CR#1011395.
Added Xilinx copyright to files containing xilinx code
and retain FreeRTOS license text as-is. Also, added
FreeRTOS copyright in porting files which uses FreeRTOS
code, wherever it is missing.

hdcp1x_v4_2: